--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -14,6 +14,12 @@
         "512": "images/icon-512.png"
     },
 
+    "background": {
+        "scripts": [
+            "style.js"
+        ]
+    },
+
     "content_scripts": [{
         "js": [ "content.js" ],
         "matches": [ "*://*.youtube.com/*" ],
